@@ -1,55 +1,52 @@
 package run.halo.app.service.impl;
 
-import lombok.extern.slf4j.Slf4j;
-import org.apache.commons.lang3.StringUtils;
-import org.eclipse.jgit.api.Git;
-import org.eclipse.jgit.api.PullResult;
-import org.eclipse.jgit.api.ResetCommand;
-import org.eclipse.jgit.api.errors.GitAPIException;
-import org.eclipse.jgit.lib.Constants;
-import org.eclipse.jgit.lib.Ref;
-import org.eclipse.jgit.lib.Repository;
-import org.eclipse.jgit.revwalk.RevCommit;
-import org.eclipse.jgit.revwalk.RevWalk;
-import org.eclipse.jgit.transport.RemoteConfig;
-import org.eclipse.jgit.transport.URIish;
-import org.springframework.context.ApplicationEventPublisher;
-import org.springframework.http.ResponseEntity;
-import org.springframework.lang.NonNull;
-import org.springframework.lang.Nullable;
-import org.springframework.stereotype.Service;
-import org.springframework.util.Assert;
-import org.springframework.util.CollectionUtils;
-import org.springframework.web.client.RestTemplate;
-import org.springframework.web.multipart.MultipartFile;
-import run.halo.app.cache.AbstractStringCacheStore;
-import run.halo.app.config.properties.HaloProperties;
-import run.halo.app.event.theme.ThemeActivatedEvent;
-import run.halo.app.event.theme.ThemeUpdatedEvent;
-import run.halo.app.exception.*;
-import run.halo.app.handler.theme.config.ThemeConfigResolver;
-import run.halo.app.handler.theme.config.ThemePropertyResolver;
-import run.halo.app.handler.theme.config.support.Group;
-import run.halo.app.handler.theme.config.support.ThemeProperty;
-import run.halo.app.model.properties.PrimaryProperties;
-import run.halo.app.model.support.HaloConst;
-import run.halo.app.model.support.ThemeFile;
-import run.halo.app.service.OptionService;
-import run.halo.app.service.ThemeService;
-import run.halo.app.utils.*;
-
 import java.io.IOException;
-import java.net.URISyntaxException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.*;
+import java.util.Collections;
+import java.util.List;
+import java.util.Optional;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
-import java.util.zip.ZipInputStream;
-
-import static run.halo.app.model.support.HaloConst.DEFAULT_THEME_ID;
+import lombok.extern.slf4j.Slf4j;
+import org.apache.commons.lang3.StringUtils;
+import org.springframework.context.ApplicationEventPublisher;
+import org.springframework.http.ResponseEntity;
+import org.springframework.lang.NonNull;
+import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
+import org.springframework.util.Assert;
+import org.springframework.web.client.RestTemplate;
+import org.springframework.web.multipart.MultipartFile;
+import run.halo.app.config.properties.HaloProperties;
+import run.halo.app.event.theme.ThemeActivatedEvent;
+import run.halo.app.event.theme.ThemeUpdatedEvent;
+import run.halo.app.exception.BadRequestException;
+import run.halo.app.exception.ForbiddenException;
+import run.halo.app.exception.NotFoundException;
+import run.halo.app.exception.ServiceException;
+import run.halo.app.exception.ThemeNotSupportException;
+import run.halo.app.exception.ThemePropertyMissingException;
+import run.halo.app.exception.ThemeUpdateException;
+import run.halo.app.handler.theme.config.ThemeConfigResolver;
+import run.halo.app.handler.theme.config.support.Group;
+import run.halo.app.handler.theme.config.support.ThemeProperty;
+import run.halo.app.model.support.HaloConst;
+import run.halo.app.model.support.ThemeFile;
+import run.halo.app.repository.ThemeRepository;
+import run.halo.app.repository.ThemeSettingRepository;
+import run.halo.app.service.ThemeService;
+import run.halo.app.theme.GitThemeFetcher;
+import run.halo.app.theme.GitThemeUpdater;
+import run.halo.app.theme.MultipartFileThemeUpdater;
+import run.halo.app.theme.MultipartZipFileThemeFetcher;
+import run.halo.app.theme.ThemeFetcherComposite;
+import run.halo.app.theme.ThemeFileScanner;
+import run.halo.app.theme.ThemePropertyScanner;
+import run.halo.app.theme.ZipThemeFetcher;
+import run.halo.app.utils.FileUtils;
 
 /**
  * Theme service implementation.
@@ -66,146 +63,89 @@ public class ThemeServiceImpl implements ThemeService {
      */
     private final Path themeWorkDir;
 
-    private final OptionService optionService;
-
-    private final AbstractStringCacheStore cacheStore;
-
     private final ThemeConfigResolver themeConfigResolver;
-
-    private final ThemePropertyResolver themePropertyResolver;
 
     private final RestTemplate restTemplate;
 
     private final ApplicationEventPublisher eventPublisher;
 
-    /**
-     * Activated theme id.
-     */
-    private String activatedThemeId;
+    private final ThemeSettingRepository themeSettingRepository;
 
-    /**
-     * Activated theme property.
-     */
-    private ThemeProperty activatedTheme;
+    private final ThemeFetcherComposite fetcherComposite;
+
+    private final ThemeRepository themeRepository;
 
     public ThemeServiceImpl(HaloProperties haloProperties,
-                            OptionService optionService,
-                            AbstractStringCacheStore cacheStore,
-                            ThemeConfigResolver themeConfigResolver,
-                            ThemePropertyResolver themePropertyResolver,
-                            RestTemplate restTemplate,
-                            ApplicationEventPublisher eventPublisher) {
-        this.optionService = optionService;
-        this.cacheStore = cacheStore;
+        ThemeConfigResolver themeConfigResolver,
+        RestTemplate restTemplate,
+        ApplicationEventPublisher eventPublisher,
+        ThemeSettingRepository themeSettingRepository,
+        ThemeRepository themeRepository) {
         this.themeConfigResolver = themeConfigResolver;
-        this.themePropertyResolver = themePropertyResolver;
         this.restTemplate = restTemplate;
 
-        themeWorkDir = Paths.get(haloProperties.getWorkDir(), THEME_FOLDER);
+        this.themeWorkDir = Paths.get(haloProperties.getWorkDir(), THEME_FOLDER);
         this.eventPublisher = eventPublisher;
+        this.themeSettingRepository = themeSettingRepository;
+        this.themeRepository = themeRepository;
+
+        this.fetcherComposite = new ThemeFetcherComposite();
+        this.fetcherComposite.addFetcher(new ZipThemeFetcher());
+        this.fetcherComposite.addFetcher(new GitThemeFetcher());
+        this.fetcherComposite.addFetcher(new MultipartZipFileThemeFetcher());
     }
 
     @Override
-    public ThemeProperty getThemeOfNonNullBy(String themeId) {
-        return getThemeBy(themeId).orElseThrow(() -> new NotFoundException("没有找到 id 为 " + themeId + " 的主题").setErrorData(themeId));
+    @NonNull
+    public ThemeProperty getThemeOfNonNullBy(@NonNull String themeId) {
+        return fetchThemePropertyBy(themeId)
+            .orElseThrow(
+                () -> new NotFoundException(themeId + " 主题不存在或已删除！").setErrorData(themeId));
     }
 
     @Override
-    public Optional<ThemeProperty> getThemeBy(String themeId) {
-        if (StringUtils.isBlank(themeId)) {
-            return Optional.empty();
-        }
-
-        // Get all themes
-        Set<ThemeProperty> themes = getThemes();
-
-        // filter and find first
-        return themes.stream().filter(themeProperty -> StringUtils.equals(themeProperty.getId(), themeId)).findFirst();
+    @NonNull
+    public Optional<ThemeProperty> fetchThemePropertyBy(String themeId) {
+        return themeRepository.fetchThemePropertyByThemeId(themeId);
     }
 
     @Override
-    public Set<ThemeProperty> getThemes() {
+    @NonNull
+    public List<ThemeProperty> getThemes() {
+        return themeRepository.listAll();
+    }
 
-        Optional<ThemeProperty[]> themePropertiesOptional = cacheStore.getAny(THEMES_CACHE_KEY, ThemeProperty[].class);
+    @Override
+    @NonNull
+    public List<ThemeFile> listThemeFolderBy(@NonNull String themeId) {
+        return fetchThemePropertyBy(themeId)
+            .map(themeProperty -> ThemeFileScanner.INSTANCE.scan(themeProperty.getThemePath()))
+            .orElse(Collections.emptyList());
+    }
 
-        if (themePropertiesOptional.isPresent()) {
-            // Convert to theme properties
-            ThemeProperty[] themeProperties = themePropertiesOptional.get();
-            return new HashSet<>(Arrays.asList(themeProperties));
-        }
-
-        try (Stream<Path> pathStream = Files.list(getBasePath())) {
-
-            // List and filter sub folders
-            List<Path> themePaths = pathStream.filter(path -> Files.isDirectory(path))
-                .collect(Collectors.toList());
-
-            if (CollectionUtils.isEmpty(themePaths)) {
-                return Collections.emptySet();
+    @Override
+    @NonNull
+    public List<String> listCustomTemplates(@NonNull String themeId, @NonNull String prefix) {
+        return fetchThemePropertyBy(themeId).map(themeProperty -> {
+            // Get the theme path
+            Path themePath = Paths.get(themeProperty.getThemePath());
+            try (Stream<Path> pathStream = Files.list(themePath)) {
+                return pathStream.filter(path ->
+                    StringUtils.startsWithIgnoreCase(path.getFileName().toString(), prefix))
+                    .map(path -> {
+                        // Remove prefix
+                        final var customTemplate = StringUtils
+                            .removeStartIgnoreCase(path.getFileName().toString(), prefix);
+                        // Remove suffix
+                        return StringUtils
+                            .removeEndIgnoreCase(customTemplate, HaloConst.SUFFIX_FTL);
+                    })
+                    .distinct()
+                    .collect(Collectors.toList());
+            } catch (Exception e) {
+                throw new ServiceException("Failed to list files of path " + themePath, e);
             }
-
-            // Get theme properties
-            Set<ThemeProperty> themes = themePaths.stream().map(this::getProperty).collect(Collectors.toSet());
-
-            // Cache the themes
-            cacheStore.putAny(THEMES_CACHE_KEY, themes);
-
-            return themes;
-        } catch (IOException e) {
-            throw new ServiceException("Failed to get themes", e);
-        }
-    }
-
-    @Override
-    public List<ThemeFile> listThemeFolder(String absolutePath) {
-        return listThemeFileTree(Paths.get(absolutePath));
-    }
-
-    @Override
-    public List<ThemeFile> listThemeFolderBy(String themeId) {
-        // Get the theme property
-        ThemeProperty themeProperty = getThemeOfNonNullBy(themeId);
-
-        // List theme file as tree view
-        return listThemeFolder(themeProperty.getThemePath());
-    }
-
-    @Override
-    public Set<String> listCustomTemplates(String themeId) {
-        // Get the theme path
-        Path themePath = Paths.get(getThemeOfNonNullBy(themeId).getThemePath());
-
-        try (Stream<Path> pathStream = Files.list(themePath)) {
-            return pathStream.filter(path -> StringUtils.startsWithIgnoreCase(path.getFileName().toString(), CUSTOM_SHEET_PREFIX))
-                .map(path -> {
-                    // Remove prefix
-                    String customTemplate = StringUtils.removeStartIgnoreCase(path.getFileName().toString(), CUSTOM_SHEET_PREFIX);
-                    // Remove suffix
-                    return StringUtils.removeEndIgnoreCase(customTemplate, HaloConst.SUFFIX_FTL);
-                })
-                .collect(Collectors.toSet());
-        } catch (IOException e) {
-            throw new ServiceException("Failed to list files of path " + themePath.toString(), e);
-        }
-    }
-
-    @Override
-    public Set<String> listCustomTemplates(String themeId, String prefix) {
-        // Get the theme path
-        Path themePath = Paths.get(getThemeOfNonNullBy(themeId).getThemePath());
-
-        try (Stream<Path> pathStream = Files.list(themePath)) {
-            return pathStream.filter(path -> StringUtils.startsWithIgnoreCase(path.getFileName().toString(), prefix))
-                .map(path -> {
-                    // Remove prefix
-                    String customTemplate = StringUtils.removeStartIgnoreCase(path.getFileName().toString(), prefix);
-                    // Remove suffix
-                    return StringUtils.removeEndIgnoreCase(customTemplate, HaloConst.SUFFIX_FTL);
-                })
-                .collect(Collectors.toSet());
-        } catch (IOException e) {
-            throw new ServiceException("Failed to list files of path " + themePath.toString(), e);
-        }
+        }).orElse(Collections.emptyList());
     }
 
     @Override
@@ -214,19 +154,19 @@ public class ThemeServiceImpl implements ThemeService {
             return false;
         }
 
-        // Resolve template path
-        Path templatePath = Paths.get(getActivatedTheme().getThemePath(), template);
-
-        // Check the directory
-        checkDirectory(templatePath.toString());
-
-        // Check existence
-        return Files.exists(templatePath);
+        return fetchActivatedTheme().map(themeProperty -> {
+            // Resolve template path
+            Path templatePath = Paths.get(themeProperty.getThemePath(), template);
+            // Check the directory
+            checkDirectory(templatePath.toString());
+            // Check existence
+            return Files.exists(templatePath);
+        }).orElse(false);
     }
 
     @Override
     public boolean themeExists(String themeId) {
-        return getThemeBy(themeId).isPresent();
+        return fetchThemePropertyBy(themeId).isPresent();
     }
 
     @Override
@@ -235,34 +175,35 @@ public class ThemeServiceImpl implements ThemeService {
     }
 
     @Override
-    public String getTemplateContent(String absolutePath) {
+    public String getTemplateContent(@NonNull String absolutePath) {
         // Check the path
         checkDirectory(absolutePath);
 
         // Read file
         Path path = Paths.get(absolutePath);
         try {
-            return new String(Files.readAllBytes(path), StandardCharsets.UTF_8);
+            return Files.readString(path);
         } catch (IOException e) {
             throw new ServiceException("读取模板内容失败 " + absolutePath, e);
         }
     }
 
     @Override
-    public String getTemplateContent(String themeId, String absolutePath) {
+    @NonNull
+    public String getTemplateContent(@NonNull String themeId, @NonNull String absolutePath) {
         checkDirectory(themeId, absolutePath);
 
         // Read file
         Path path = Paths.get(absolutePath);
         try {
-            return new String(Files.readAllBytes(path), StandardCharsets.UTF_8);
+            return Files.readString(path);
         } catch (IOException e) {
             throw new ServiceException("读取模板内容失败 " + absolutePath, e);
         }
     }
 
     @Override
-    public void saveTemplateContent(String absolutePath, String content) {
+    public void saveTemplateContent(@NonNull String absolutePath, String content) {
         // Check the path
         checkDirectory(absolutePath);
 
@@ -276,7 +217,8 @@ public class ThemeServiceImpl implements ThemeService {
     }
 
     @Override
-    public void saveTemplateContent(String themeId, String absolutePath, String content) {
+    public void saveTemplateContent(@NonNull String themeId, @NonNull String absolutePath,
+        String content) {
         // Check the path
         checkDirectory(themeId, absolutePath);
 
@@ -289,19 +231,24 @@ public class ThemeServiceImpl implements ThemeService {
         }
     }
 
+    @Transactional
     @Override
-    public void deleteTheme(String themeId) {
+    public void deleteTheme(@NonNull String themeId, @NonNull Boolean deleteSettings) {
         // Get the theme property
         ThemeProperty themeProperty = getThemeOfNonNullBy(themeId);
 
         if (themeId.equals(getActivatedThemeId())) {
             // Prevent to delete the activated theme
-            throw new BadRequestException("不能删除正在使用的主题").setErrorData(themeId);
+            throw new BadRequestException("无法删除正在使用的主题！").setErrorData(themeId);
         }
 
         try {
             // Delete the folder
             FileUtils.deleteFolder(Paths.get(themeProperty.getThemePath()));
+            if (deleteSettings) {
+                // Delete theme settings
+                themeSettingRepository.deleteByThemeId(themeId);
+            }
             // Delete theme cache
             eventPublisher.publishEvent(new ThemeUpdatedEvent(this));
         } catch (Exception e) {
@@ -310,7 +257,8 @@ public class ThemeServiceImpl implements ThemeService {
     }
 
     @Override
-    public List<Group> fetchConfig(String themeId) {
+    @NonNull
+    public List<Group> fetchConfig(@NonNull String themeId) {
         Assert.hasText(themeId, "Theme id must not be blank");
 
         // Get theme property
@@ -334,7 +282,7 @@ public class ThemeServiceImpl implements ThemeService {
                 }
 
                 // Read the yaml file
-                String optionContent = new String(Files.readAllBytes(optionsPath), StandardCharsets.UTF_8);
+                String optionContent = Files.readString(optionsPath);
 
                 // Resolve it
                 return themeConfigResolver.resolve(optionContent);
@@ -348,67 +296,39 @@ public class ThemeServiceImpl implements ThemeService {
 
     @Override
     public String render(String pageName) {
-        // Get activated theme
-        ThemeProperty activatedTheme = getActivatedTheme();
-        // Build render url
-        return String.format(RENDER_TEMPLATE, activatedTheme.getFolderName(), pageName);
+        var folderName = getActivatedTheme().getFolderName();
+        return "themes/" + folderName + "/" + pageName;
     }
 
     @Override
     public String renderWithSuffix(String pageName) {
-        // Get activated theme
-        ThemeProperty activatedTheme = getActivatedTheme();
-        // Build render url
-        return String.format(RENDER_TEMPLATE_SUFFIX, activatedTheme.getFolderName(), pageName);
+        var folderName = getActivatedTheme().getFolderName();
+        return "themes/" + folderName + "/" + pageName + ".ftl";
     }
 
     @Override
+    @NonNull
     public String getActivatedThemeId() {
-        if (activatedThemeId == null) {
-            synchronized (this) {
-                if (activatedThemeId == null) {
-                    activatedThemeId = optionService.getByPropertyOrDefault(PrimaryProperties.THEME, String.class, DEFAULT_THEME_ID);
-                }
-            }
-        }
-
-        return activatedThemeId;
+        return themeRepository.getActivatedThemeId();
     }
 
     @Override
+    @NonNull
     public ThemeProperty getActivatedTheme() {
-        if (activatedTheme == null) {
-            synchronized (this) {
-                if (activatedTheme == null) {
-                    // Get theme property
-                    activatedTheme = getThemeOfNonNullBy(getActivatedThemeId());
-                }
-            }
-        }
-
-        return activatedTheme;
-    }
-
-    /**
-     * Sets activated theme.
-     *
-     * @param activatedTheme activated theme
-     */
-    private void setActivatedTheme(@Nullable ThemeProperty activatedTheme) {
-        this.activatedTheme = activatedTheme;
-        this.activatedThemeId = Optional.ofNullable(activatedTheme).map(ThemeProperty::getId).orElse(null);
+        return fetchActivatedTheme().orElseThrow();
     }
 
     @Override
-    public ThemeProperty activateTheme(String themeId) {
-        // Check existence of the theme
-        ThemeProperty themeProperty = getThemeOfNonNullBy(themeId);
+    @NonNull
+    public Optional<ThemeProperty> fetchActivatedTheme() {
+        return Optional.of(themeRepository.getActivatedThemeProperty());
+    }
 
-        // Save the theme to database
-        optionService.saveProperty(PrimaryProperties.THEME, themeId);
-
-        // Set activated theme
-        setActivatedTheme(themeProperty);
+    @Override
+    @NonNull
+    public ThemeProperty activateTheme(@NonNull String themeId) {
+        // set activated theme
+        themeRepository.setActivatedTheme(themeId);
 
         // Clear the cache
         eventPublisher.publishEvent(new ThemeUpdatedEvent(this));
@@ -416,114 +336,24 @@ public class ThemeServiceImpl implements ThemeService {
         // Publish a theme activated event
         eventPublisher.publishEvent(new ThemeActivatedEvent(this));
 
-        return themeProperty;
+        return themeRepository.getActivatedThemeProperty();
     }
 
     @Override
-    public ThemeProperty upload(MultipartFile file) {
+    @NonNull
+    public ThemeProperty upload(@NonNull MultipartFile file) {
         Assert.notNull(file, "Multipart file must not be null");
 
-        if (!StringUtils.endsWithIgnoreCase(file.getOriginalFilename(), ".zip")) {
-            throw new UnsupportedMediaTypeException("不支持的文件类型: " + file.getContentType()).setErrorData(file.getOriginalFilename());
-        }
-
-        ZipInputStream zis = null;
-        Path tempPath = null;
-
-        try {
-            // Create temp directory
-            tempPath = FileUtils.createTempDirectory();
-            String basename = FilenameUtils.getBasename(file.getOriginalFilename());
-            Path themeTempPath = tempPath.resolve(basename);
-
-            // Check directory traversal
-            FileUtils.checkDirectoryTraversal(tempPath, themeTempPath);
-
-            // New zip input stream
-            zis = new ZipInputStream(file.getInputStream());
-
-            // Unzip to temp path
-            FileUtils.unzip(zis, themeTempPath);
-
-            // Go to the base folder and add the theme into system
-            return add(FileUtils.tryToSkipZipParentFolder(themeTempPath));
-        } catch (IOException e) {
-            throw new ServiceException("上传主题失败: " + file.getOriginalFilename(), e);
-        } finally {
-            // Close zip input stream
-            FileUtils.closeQuietly(zis);
-            // Delete folder after testing
-            FileUtils.deleteFolderQuietly(tempPath);
-        }
+        final var newThemeProperty = this.fetcherComposite.fetch(file);
+        return this.themeRepository.attemptToAdd(newThemeProperty);
     }
 
     @Override
-    public ThemeProperty add(Path themeTmpPath) throws IOException {
-        Assert.notNull(themeTmpPath, "Theme temporary path must not be null");
-        Assert.isTrue(Files.isDirectory(themeTmpPath), "Theme temporary path must be a directory");
-
-        log.debug("Children path of [{}]:", themeTmpPath);
-
-        try (Stream<Path> pathStream = Files.list(themeTmpPath)) {
-            pathStream.forEach(path -> log.debug(path.toString()));
-        }
-
-        // Check property config
-        ThemeProperty tmpThemeProperty = getProperty(themeTmpPath);
-
-        // Check theme existence
-        boolean isExist = getThemes().stream()
-            .anyMatch(themeProperty -> themeProperty.getId().equalsIgnoreCase(tmpThemeProperty.getId()));
-
-        if (isExist) {
-            throw new AlreadyExistsException("当前安装的主题已存在");
-        }
-
-        // Not support current halo version.
-        if (StringUtils.isNotEmpty(tmpThemeProperty.getRequire()) && !VersionUtil.compareVersion(HaloConst.HALO_VERSION, tmpThemeProperty.getRequire())) {
-            throw new ThemeNotSupportException("当前主题仅支持 Halo " + tmpThemeProperty.getRequire() + " 以上的版本");
-        }
-
-        // Copy the temporary path to current theme folder
-        Path targetThemePath = themeWorkDir.resolve(tmpThemeProperty.getId());
-        FileUtils.copyFolder(themeTmpPath, targetThemePath);
-
-        // Get property again
-        ThemeProperty property = getProperty(targetThemePath);
-
-        // Clear theme cache
-        this.eventPublisher.publishEvent(new ThemeUpdatedEvent(this));
-
-        // Delete cache
-        return property;
-    }
-
-    @Override
-    public ThemeProperty fetch(String uri) {
+    public ThemeProperty fetch(@NonNull String uri) {
         Assert.hasText(uri, "Theme remote uri must not be blank");
 
-        Path tmpPath = null;
-
-        try {
-            // Create temp path
-            tmpPath = FileUtils.createTempDirectory();
-            // Create temp path
-            Path themeTmpPath = tmpPath.resolve(HaloUtils.randomUUIDWithoutDash());
-
-            if (StringUtils.endsWithIgnoreCase(uri, ".zip")) {
-                downloadZipAndUnzip(uri, themeTmpPath);
-            } else {
-                uri = StringUtils.appendIfMissingIgnoreCase(uri, ".git", ".git");
-                // Clone from git
-                GitUtils.cloneFromGit(uri, themeTmpPath);
-            }
-
-            return add(themeTmpPath);
-        } catch (IOException | GitAPIException e) {
-            throw new ServiceException("主题拉取失败 " + uri, e);
-        } finally {
-            FileUtils.deleteFolderQuietly(tmpPath);
-        }
+        final var themeProperty = fetcherComposite.fetch(uri);
+        return this.themeRepository.attemptToAdd(themeProperty);
     }
 
     @Override
@@ -533,17 +363,16 @@ public class ThemeServiceImpl implements ThemeService {
 
     @Override
     public ThemeProperty update(String themeId) {
+        final var themeUpdater = new GitThemeUpdater(themeRepository, fetcherComposite);
         Assert.hasText(themeId, "Theme id must not be blank");
 
-        ThemeProperty updatingTheme = getThemeOfNonNullBy(themeId);
-
         try {
-            pullFromGit(updatingTheme);
+            final var themeProperty = themeUpdater.update(themeId);
         } catch (Exception e) {
             if (e instanceof ThemeNotSupportException) {
                 throw (ThemeNotSupportException) e;
             }
-            throw new ThemeUpdateException("主题更新失败！您与主题作者可能同时更改了同一个文件，您也可以尝试删除主题并重新拉取最新的主题", e).setErrorData(themeId);
+            throw new ThemeUpdateException("主题更新失败！", e).setErrorData(themeId);
         }
 
         eventPublisher.publishEvent(new ThemeUpdatedEvent(this));
@@ -554,152 +383,26 @@ public class ThemeServiceImpl implements ThemeService {
     @Override
     public ThemeProperty update(String themeId, MultipartFile file) {
         Assert.hasText(themeId, "Theme id must not be blank");
-        Assert.notNull(themeId, "Theme file must not be blank");
+        Assert.notNull(file, "Theme file must not be null");
 
-        if (!StringUtils.endsWithIgnoreCase(file.getOriginalFilename(), ".zip")) {
-            throw new UnsupportedMediaTypeException("不支持的文件类型: " + file.getContentType()).setErrorData(file.getOriginalFilename());
-        }
-
-        ThemeProperty updatingTheme = getThemeOfNonNullBy(themeId);
-
-        ZipInputStream zis = null;
-        Path tempPath = null;
-
+        final var themeUpdater =
+            new MultipartFileThemeUpdater(file, fetcherComposite, themeRepository);
         try {
-            // Create temp directory
-            tempPath = FileUtils.createTempDirectory();
-
-            String basename = FilenameUtils.getBasename(file.getOriginalFilename());
-            Path themeTempPath = tempPath.resolve(basename);
-
-            // Check directory traversal
-            FileUtils.checkDirectoryTraversal(tempPath, themeTempPath);
-
-            // New zip input stream
-            zis = new ZipInputStream(file.getInputStream());
-
-            // Unzip to temp path
-            FileUtils.unzip(zis, themeTempPath);
-
-            Path preparePath = FileUtils.tryToSkipZipParentFolder(themeTempPath);
-
-            ThemeProperty prepareThemeProperty = getProperty(preparePath);
-
-            if (!prepareThemeProperty.getId().equals(updatingTheme.getId())) {
-                throw new ServiceException("上传的主题包不是该主题的更新包: " + file.getOriginalFilename());
-            }
-
-            // Not support current halo version.
-            if (StringUtils.isNotEmpty(prepareThemeProperty.getRequire()) && !VersionUtil.compareVersion(HaloConst.HALO_VERSION, prepareThemeProperty.getRequire())) {
-                throw new ThemeNotSupportException("新版本主题仅支持 Halo " + prepareThemeProperty.getRequire() + " 以上的版本");
-            }
-
-            // Coping new theme files to old theme folder.
-            FileUtils.copyFolder(preparePath, Paths.get(updatingTheme.getThemePath()));
-
-            eventPublisher.publishEvent(new ThemeUpdatedEvent(this));
-
-            // Gets theme property again.
-            return getProperty(Paths.get(updatingTheme.getThemePath()));
+            return themeUpdater.update(themeId);
         } catch (IOException e) {
-            throw new ServiceException("更新主题失败: " + file.getOriginalFilename(), e);
-        } finally {
-            // Close zip input stream
-            FileUtils.closeQuietly(zis);
-            // Delete folder after testing
-            FileUtils.deleteFolderQuietly(tempPath);
+            throw new ServiceException("更新主题失败：" + e.getMessage(), e);
         }
-    }
-
-    private void pullFromGit(@NonNull ThemeProperty themeProperty) throws IOException, GitAPIException, URISyntaxException {
-        Assert.notNull(themeProperty, "Theme property must not be null");
-
-        // Get branch
-        String branch = StringUtils.isBlank(themeProperty.getBranch()) ?
-            DEFAULT_REMOTE_BRANCH : themeProperty.getBranch();
-
-        Git git = null;
-
-        try {
-            git = GitUtils.openOrInit(Paths.get(themeProperty.getThemePath()));
-
-            Repository repository = git.getRepository();
-
-            RevWalk revWalk = new RevWalk(repository);
-
-            Ref ref = repository.getAllRefs().get(Constants.HEAD);
-
-            RevCommit lastCommit = revWalk.parseCommit(ref.getObjectId());
-
-            // Force to set remote name
-            git.remoteRemove().setRemoteName(THEME_PROVIDER_REMOTE_NAME).call();
-            RemoteConfig remoteConfig = git.remoteAdd()
-                .setName(THEME_PROVIDER_REMOTE_NAME)
-                .setUri(new URIish(themeProperty.getRepo()))
-                .call();
-
-            // Add all changes
-            git.add()
-                .addFilepattern(".")
-                .call();
-            // Commit the changes
-            git.commit().setMessage("Commit by halo automatically").call();
-
-            // Check out to specified branch
-            if (!StringUtils.equalsIgnoreCase(branch, git.getRepository().getBranch())) {
-                boolean present = git.branchList()
-                    .call()
-                    .stream()
-                    .map(Ref::getName)
-                    .anyMatch(name -> StringUtils.equalsIgnoreCase(name, branch));
-
-                git.checkout()
-                    .setCreateBranch(true)
-                    .setForced(!present)
-                    .setName(branch)
-                    .call();
-            }
-
-            // Pull with rebasing
-            PullResult pullResult = git.pull()
-                .setRemote(remoteConfig.getName())
-                .setRemoteBranchName(branch)
-                .setRebase(true)
-                .call();
-
-            if (!pullResult.isSuccessful()) {
-                log.debug("Rebase result: [{}]", pullResult.getRebaseResult());
-                log.debug("Merge result: [{}]", pullResult.getMergeResult());
-
-                throw new ThemeUpdateException("拉取失败！您与主题作者可能同时更改了同一个文件");
-            }
-
-            // updated successfully.
-            ThemeProperty updatedThemeProperty = getProperty(Paths.get(themeProperty.getThemePath()));
-
-            // Not support current halo version.
-            if (StringUtils.isNotEmpty(updatedThemeProperty.getRequire()) && !VersionUtil.compareVersion(HaloConst.HALO_VERSION, updatedThemeProperty.getRequire())) {
-                // reset theme version
-                git.reset()
-                    .setMode(ResetCommand.ResetType.HARD)
-                    .setRef(lastCommit.getName())
-                    .call();
-                throw new ThemeNotSupportException("新版本主题仅支持 Halo " + updatedThemeProperty.getRequire() + " 以上的版本");
-            }
-        } finally {
-            GitUtils.closeQuietly(git);
-        }
-
     }
 
     /**
      * Downloads zip file and unzip it into specified path.
      *
-     * @param zipUrl     zip url must not be null
+     * @param zipUrl zip url must not be null
      * @param targetPath target path must not be null
      * @throws IOException throws when download zip or unzip error
      */
-    private void downloadZipAndUnzip(@NonNull String zipUrl, @NonNull Path targetPath) throws IOException {
+    private void downloadZipAndUnzip(@NonNull String zipUrl, @NonNull Path targetPath)
+        throws IOException {
         Assert.hasText(zipUrl, "Zip url must not be blank");
 
         log.debug("Downloading [{}]", zipUrl);
@@ -709,81 +412,15 @@ public class ThemeServiceImpl implements ThemeService {
         log.debug("Download response: [{}]", downloadResponse.getStatusCode());
 
         if (downloadResponse.getStatusCode().isError() || downloadResponse.getBody() == null) {
-            throw new ServiceException("下载失败 " + zipUrl + ", 状态码: " + downloadResponse.getStatusCode());
+            throw new ServiceException("下载失败 "
+                + zipUrl
+                + ", 状态码: "
+                + downloadResponse.getStatusCode());
         }
 
         log.debug("Downloaded [{}]", zipUrl);
-
         // Unzip it
         FileUtils.unzip(downloadResponse.getBody(), targetPath);
-    }
-
-    /**
-     * Lists theme files as tree view.
-     *
-     * @param topPath must not be null
-     * @return theme file tree view or null only if the top path is not a directory
-     */
-    @Nullable
-    private List<ThemeFile> listThemeFileTree(@NonNull Path topPath) {
-        Assert.notNull(topPath, "Top path must not be null");
-
-        // Check file type
-        if (!Files.isDirectory(topPath)) {
-            return null;
-        }
-
-        try (Stream<Path> pathStream = Files.list(topPath)) {
-            List<ThemeFile> themeFiles = new LinkedList<>();
-
-            pathStream.forEach(path -> {
-                // Build theme file
-                ThemeFile themeFile = new ThemeFile();
-                themeFile.setName(path.getFileName().toString());
-                themeFile.setPath(path.toString());
-                themeFile.setIsFile(Files.isRegularFile(path));
-                themeFile.setEditable(isEditable(path));
-
-                if (Files.isDirectory(path)) {
-                    themeFile.setNode(listThemeFileTree(path));
-                }
-
-                // Add to theme files
-                themeFiles.add(themeFile);
-            });
-
-            // Sort with isFile param
-            themeFiles.sort(new ThemeFile());
-
-            return themeFiles;
-        } catch (IOException e) {
-            throw new ServiceException("Failed to list sub files", e);
-        }
-    }
-
-    /**
-     * Check if the given path is editable.
-     *
-     * @param path must not be null
-     * @return true if the given path is editable; false otherwise
-     */
-    private boolean isEditable(@NonNull Path path) {
-        Assert.notNull(path, "Path must not be null");
-
-        boolean isEditable = Files.isReadable(path) && Files.isWritable(path);
-
-        if (!isEditable) {
-            return false;
-        }
-
-        // Check suffix
-        for (String suffix : CAN_EDIT_SUFFIX) {
-            if (path.toString().endsWith(suffix)) {
-                return true;
-            }
-        }
-
-        return false;
     }
 
     /**
@@ -800,88 +437,12 @@ public class ThemeServiceImpl implements ThemeService {
     /**
      * Check if directory is valid or not.
      *
-     * @param themeId      themeId must not be blank
+     * @param themeId themeId must not be blank
      * @param absoluteName throws when the given absolute directory name is invalid
      */
     private void checkDirectory(@NonNull String themeId, @NonNull String absoluteName) {
         ThemeProperty themeProperty = getThemeOfNonNullBy(themeId);
         FileUtils.checkDirectoryTraversal(themeProperty.getThemePath(), absoluteName);
-    }
-
-    /**
-     * Gets property path of nullable.
-     *
-     * @param themePath theme path.
-     * @return an optional property path
-     */
-    @NonNull
-    private Optional<Path> getThemePropertyPathOfNullable(@NonNull Path themePath) {
-        Assert.notNull(themePath, "Theme path must not be null");
-
-        for (String propertyPathName : THEME_PROPERTY_FILE_NAMES) {
-            Path propertyPath = themePath.resolve(propertyPathName);
-
-            log.debug("Attempting to find property file: [{}]", propertyPath);
-            if (Files.exists(propertyPath) && Files.isReadable(propertyPath)) {
-                log.debug("Found property file: [{}]", propertyPath);
-                return Optional.of(propertyPath);
-            }
-        }
-
-        log.warn("Property file was not found in [{}]", themePath);
-
-        return Optional.empty();
-    }
-
-    /**
-     * Gets property path of non null.
-     *
-     * @param themePath theme path.
-     * @return property path won't be null
-     */
-    @NonNull
-    private Path getThemePropertyPath(@NonNull Path themePath) {
-        return getThemePropertyPathOfNullable(themePath).orElseThrow(() -> new ThemePropertyMissingException(themePath + " 没有说明文件").setErrorData(themePath));
-    }
-
-    private Optional<ThemeProperty> getPropertyOfNullable(Path themePath) {
-        Assert.notNull(themePath, "Theme path must not be null");
-
-        Path propertyPath = getThemePropertyPath(themePath);
-
-        try {
-            // Get property content
-            String propertyContent = new String(Files.readAllBytes(propertyPath), StandardCharsets.UTF_8);
-
-            // Resolve the base properties
-            ThemeProperty themeProperty = themePropertyResolver.resolve(propertyContent);
-
-            // Resolve additional properties
-            themeProperty.setThemePath(themePath.toString());
-            themeProperty.setFolderName(themePath.getFileName().toString());
-            themeProperty.setHasOptions(hasOptions(themePath));
-            themeProperty.setActivated(false);
-
-            // Set screenshots
-            getScreenshotsFileName(themePath).ifPresent(screenshotsName ->
-                themeProperty.setScreenshots(StringUtils.join(optionService.getBlogBaseUrl(),
-                    "/themes/",
-                    FilenameUtils.getBasename(themeProperty.getThemePath()),
-                    "/",
-                    screenshotsName)));
-
-            if (StringUtils.equals(themeProperty.getId(), getActivatedThemeId())) {
-                // Set activation
-                themeProperty.setActivated(true);
-            }
-
-            return Optional.of(themeProperty);
-
-        } catch (IOException e) {
-            log.error("Failed to load theme property file", e);
-        }
-
-        return Optional.empty();
     }
 
     /**
@@ -892,48 +453,8 @@ public class ThemeServiceImpl implements ThemeService {
      */
     @NonNull
     private ThemeProperty getProperty(@NonNull Path themePath) {
-        return getPropertyOfNullable(themePath).orElseThrow(() -> new ThemePropertyMissingException(themePath + " 没有说明文件").setErrorData(themePath));
-    }
-
-    /**
-     * Gets screenshots file name.
-     *
-     * @param themePath theme path must not be null
-     * @return screenshots file name or null if the given theme path has not screenshots
-     * @throws IOException throws when listing files
-     */
-    @NonNull
-    private Optional<String> getScreenshotsFileName(@NonNull Path themePath) throws IOException {
-        Assert.notNull(themePath, "Theme path must not be null");
-
-        try (Stream<Path> pathStream = Files.list(themePath)) {
-            return pathStream.filter(path -> Files.isRegularFile(path)
-                && Files.isReadable(path)
-                && FilenameUtils.getBasename(path.toString()).equalsIgnoreCase(THEME_SCREENSHOTS_NAME))
-                .findFirst()
-                .map(path -> path.getFileName().toString());
-        }
-    }
-
-    /**
-     * Check existence of the options.
-     *
-     * @param themePath theme path must not be null
-     * @return true if it has options; false otherwise
-     */
-    private boolean hasOptions(@NonNull Path themePath) {
-        Assert.notNull(themePath, "Path must not be null");
-
-        for (String optionsName : SETTINGS_NAMES) {
-            // Resolve the options path
-            Path optionsPath = themePath.resolve(optionsName);
-
-            log.debug("Check options file for path: [{}]", optionsPath);
-
-            if (Files.exists(optionsPath)) {
-                return true;
-            }
-        }
-        return false;
+        return ThemePropertyScanner.INSTANCE.fetchThemeProperty(themePath)
+            .orElseThrow(() -> new ThemePropertyMissingException(themePath + " 没有说明文件")
+                .setErrorData(themePath));
     }
 }
